--- a/Views/Shared/Widgets/_CustomTableViewWidget.cshtml
+++ b/Views/Shared/Widgets/_CustomTableViewWidget.cshtml
@@ -12,10 +12,13 @@
 }
 else
 {
+    <h3>
+        @Model.CustomTableName
+    </h3>
     <table>
         <thead>
             <tr>
-                @foreach (var columnName in Model.ColumnNames)
+                @foreach (string columnName in Model.ColumnNames)
                 {
             <th>
                 @columnName
@@ -24,13 +27,13 @@ else
             </tr>
         </thead>
         <tbody>
-                @foreach (var customTableItem in Model.Items)
+                @foreach (WidgetTableItem widgetTableItem in Model.Items)
                 {
             <tr>
-                     @foreach (var columnValue in Model.ColumnNames)
+                     @foreach (string columnValue in widgetTableItem.ColumnValues)
                      {
             <td>
-                          @customTableItem.GetValue(columnValue.Trim())
+                          @columnValue
             </td>
                      }
             </tr>
